@@ -30,6 +30,7 @@ import java.lang.reflect.Method;
 import java.security.AccessControlException;
 import java.sql.SQLException;
 import java.util.Collection;
+import java.util.Iterator;
 import java.util.Locale;
 import java.util.Properties;
 
@@ -42,13 +43,13 @@ import org.quartz.TriggerListener;
 import org.quartz.core.JobRunShellFactory;
 import org.quartz.core.QuartzScheduler;
 import org.quartz.core.QuartzSchedulerResources;
-import org.quartz.ee.jta.JTAAnnotationAwareJobRunShellFactory;
+import org.quartz.core.SchedulingContext;
 import org.quartz.ee.jta.JTAJobRunShellFactory;
 import org.quartz.ee.jta.UserTransactionHelper;
+import org.quartz.spi.ThreadExecutor;
 import org.quartz.impl.jdbcjobstore.JobStoreSupport;
 import org.quartz.impl.jdbcjobstore.Semaphore;
 import org.quartz.impl.jdbcjobstore.TablePrefixAware;
-import org.quartz.impl.matchers.EverythingMatcher;
 import org.quartz.simpl.RAMJobStore;
 import org.quartz.simpl.SimpleThreadPool;
 import org.quartz.spi.ClassLoadHelper;
@@ -56,7 +57,6 @@ import org.quartz.spi.InstanceIdGenerator;
 import org.quartz.spi.JobFactory;
 import org.quartz.spi.JobStore;
 import org.quartz.spi.SchedulerPlugin;
-import org.quartz.spi.ThreadExecutor;
 import org.quartz.spi.ThreadPool;
 import org.quartz.utils.ConnectionProvider;
 import org.quartz.utils.DBConnectionManager;
@@ -141,10 +141,6 @@ public class StdSchedulerFactory implements SchedulerFactory {
 
     public static final String PROP_SCHED_SKIP_UPDATE_CHECK = "org.quartz.scheduler.skipUpdateCheck";
 
-    public static final String PROP_SCHED_BATCH_TIME_WINDOW = "org.quartz.scheduler.batchTriggerAcquisitionFireAheadTimeWindow";
-
-    public static final String PROP_SCHED_MAX_BATCH_SIZE = "org.quartz.scheduler.batchTriggerAcquisitionMaxCount";
-
     public static final String PROP_SCHED_JMX_EXPORT = "org.quartz.scheduler.jmx.export";
 
     public static final String PROP_SCHED_JMX_OBJECT_NAME = "org.quartz.scheduler.jmx.objectName";
@@ -184,7 +180,7 @@ public class StdSchedulerFactory implements SchedulerFactory {
     public static final String PROP_SCHED_JOB_FACTORY_CLASS = "org.quartz.scheduler.jobFactory.class";
 
     public static final String PROP_SCHED_JOB_FACTORY_PREFIX = "org.quartz.scheduler.jobFactory";
-
+    
     public static final String PROP_SCHED_INTERRUPT_JOBS_ON_SHUTDOWN = "org.quartz.scheduler.interruptJobsOnShutdown";
 
     public static final String PROP_SCHED_INTERRUPT_JOBS_ON_SHUTDOWN_WITH_WAIT = "org.quartz.scheduler.interruptJobsOnShutdownWithWait";
@@ -202,8 +198,6 @@ public class StdSchedulerFactory implements SchedulerFactory {
     public static final String PROP_JOB_STORE_LOCK_HANDLER_CLASS = PROP_JOB_STORE_LOCK_HANDLER_PREFIX + ".class";
 
     public static final String PROP_TABLE_PREFIX = "tablePrefix";
-
-    public static final String PROP_SCHED_NAME = "schedName";
 
     public static final String PROP_JOB_STORE_CLASS = "org.quartz.jobStore.class";
 
@@ -254,8 +248,6 @@ public class StdSchedulerFactory implements SchedulerFactory {
     public static final String PROP_THREAD_EXECUTOR = "org.quartz.threadExecutor";
 
     public static final String PROP_THREAD_EXECUTOR_CLASS = "org.quartz.threadExecutor.class";
-
-    public static final String SYSTEM_PROPERTY_AS_INSTANCE_ID = "SYS_PROP";
 
     /*
      * ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
@@ -578,6 +570,7 @@ public class StdSchedulerFactory implements SchedulerFactory {
         JobStore js = null;
         ThreadPool tp = null;
         QuartzScheduler qs = null;
+        SchedulingContext schedCtxt = null;
         DBConnectionManager dbMgr = null;
         String instanceIdGeneratorClass = null;
         Properties tProps = null;
@@ -585,11 +578,10 @@ public class StdSchedulerFactory implements SchedulerFactory {
         boolean wrapJobInTx = false;
         boolean autoId = false;
         long idleWaitTime = -1;
-        long dbFailureRetry = 15000L;  // 15 secs
+        long dbFailureRetry = 15000L; // 15 secs
         String classLoadHelperClass;
         String jobFactoryClass;
-        ThreadExecutor threadExecutor;
-
+        ThreadExecutor threadExecutor = null;
 
         SchedulerRepository schedRep = SchedulerRepository.getInstance();
 
@@ -611,11 +603,6 @@ public class StdSchedulerFactory implements SchedulerFactory {
                     PROP_SCHED_INSTANCE_ID_GENERATOR_CLASS,
                     "org.quartz.simpl.SimpleInstanceIdGenerator");
         }
-        else if (schedInstId.equals(SYSTEM_PROPERTY_AS_INSTANCE_ID)) {
-            autoId = true;
-            instanceIdGeneratorClass = 
-                    "org.quartz.simpl.SystemPropertyInstanceIdGenerator";
-        }
 
         userTXLocation = cfg.getStringProperty(PROP_SCHED_USER_TX_URL,
                 userTXLocation);
@@ -634,9 +621,6 @@ public class StdSchedulerFactory implements SchedulerFactory {
 
         idleWaitTime = cfg.getLongProperty(PROP_SCHED_IDLE_WAIT_TIME,
                 idleWaitTime);
-        if(idleWaitTime > -1 && idleWaitTime < 1000) {
-            throw new SchedulerException("org.quartz.scheduler.idleWaitTime of less than 1000ms is not legal.");
-        }
         
         dbFailureRetry = cfg.getLongProperty(PROP_SCHED_DB_FAILURE_RETRY_INTERVAL, dbFailureRetry);
         if (dbFailureRetry < 0) {
@@ -650,12 +634,10 @@ public class StdSchedulerFactory implements SchedulerFactory {
             cfg.getBooleanProperty(PROP_SCHED_SCHEDULER_THREADS_INHERIT_CONTEXT_CLASS_LOADER_OF_INITIALIZING_THREAD);
 
         boolean skipUpdateCheck = cfg.getBooleanProperty(PROP_SCHED_SKIP_UPDATE_CHECK, false);
-        long batchTimeWindow = cfg.getLongProperty(PROP_SCHED_BATCH_TIME_WINDOW, 0L);
-        int maxBatchSize = cfg.getIntProperty(PROP_SCHED_MAX_BATCH_SIZE, 1);
-
+        
         boolean interruptJobsOnShutdown = cfg.getBooleanProperty(PROP_SCHED_INTERRUPT_JOBS_ON_SHUTDOWN, false);
         boolean interruptJobsOnShutdownWithWait = cfg.getBooleanProperty(PROP_SCHED_INTERRUPT_JOBS_ON_SHUTDOWN_WITH_WAIT, false);
-
+        
         boolean jmxExport = cfg.getBooleanProperty(PROP_SCHED_JMX_EXPORT);
         String jmxObjectName = cfg.getStringProperty(PROP_SCHED_JMX_OBJECT_NAME);
         
@@ -686,10 +668,14 @@ public class StdSchedulerFactory implements SchedulerFactory {
                 schedInstId = DEFAULT_INSTANCE_ID;
             }
 
+            schedCtxt = new SchedulingContext();
+            schedCtxt.setInstanceId(schedInstId);
+
             String uid = (rmiBindName == null) ? QuartzSchedulerResources.getUniqueIdentifier(
                     schedName, schedInstId) : rmiBindName;
 
-            RemoteScheduler remoteScheduler = new RemoteScheduler(uid, rmiHost, rmiPort);
+            RemoteScheduler remoteScheduler = new RemoteScheduler(schedCtxt,
+                    uid, rmiHost, rmiPort);
 
             schedRep.bind(remoteScheduler);
 
@@ -729,10 +715,14 @@ public class StdSchedulerFactory implements SchedulerFactory {
                         "Unable to instantiate RemoteMBeanScheduler class.", e);
             }
 
+            schedCtxt = new SchedulingContext();
+            schedCtxt.setInstanceId(schedInstId);
+
             if (jmxObjectName == null) {
                 jmxObjectName = QuartzSchedulerResources.generateJMXObjectName(schedName, schedInstId);
             }
 
+            jmxScheduler.setSchedulingContext(schedCtxt);
             jmxScheduler.setSchedulerObjectName(jmxObjectName);
 
             tProps = cfg.getPropertyGroup(PROP_SCHED_JMX_PROXY, true);
@@ -741,6 +731,7 @@ public class StdSchedulerFactory implements SchedulerFactory {
             } catch (Exception e) {
                 initException = new SchedulerException("RemoteMBeanScheduler class '"
                         + jmxProxyClass + "' props could not be configured.", e);
+                initException.setErrorCode(SchedulerException.ERR_BAD_CONFIGURATION);
                 throw initException;
             }
 
@@ -769,6 +760,8 @@ public class StdSchedulerFactory implements SchedulerFactory {
             } catch (Exception e) {
                 initException = new SchedulerException("JobFactory class '"
                         + jobFactoryClass + "' props could not be configured.", e);
+                initException
+                        .setErrorCode(SchedulerException.ERR_BAD_CONFIGURATION);
                 throw initException;
             }
         }
@@ -790,6 +783,8 @@ public class StdSchedulerFactory implements SchedulerFactory {
             } catch (Exception e) {
                 initException = new SchedulerException("InstanceIdGenerator class '"
                         + instanceIdGeneratorClass + "' props could not be configured.", e);
+                initException
+                        .setErrorCode(SchedulerException.ERR_BAD_CONFIGURATION);
                 throw initException;
             }
         }
@@ -797,11 +792,12 @@ public class StdSchedulerFactory implements SchedulerFactory {
         // Get ThreadPool Properties
         // ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 
-        String tpClass = cfg.getStringProperty(PROP_THREAD_POOL_CLASS, SimpleThreadPool.class.getName());
+        String tpClass = cfg.getStringProperty(PROP_THREAD_POOL_CLASS, null);
 
         if (tpClass == null) {
             initException = new SchedulerException(
-                    "ThreadPool class not specified. ");
+                    "ThreadPool class not specified. ",
+                    SchedulerException.ERR_BAD_CONFIGURATION);
             throw initException;
         }
 
@@ -810,6 +806,8 @@ public class StdSchedulerFactory implements SchedulerFactory {
         } catch (Exception e) {
             initException = new SchedulerException("ThreadPool class '"
                     + tpClass + "' could not be instantiated.", e);
+            initException
+                    .setErrorCode(SchedulerException.ERR_BAD_CONFIGURATION);
             throw initException;
         }
         tProps = cfg.getPropertyGroup(PROP_THREAD_POOL_PREFIX, true);
@@ -818,6 +816,8 @@ public class StdSchedulerFactory implements SchedulerFactory {
         } catch (Exception e) {
             initException = new SchedulerException("ThreadPool class '"
                     + tpClass + "' props could not be configured.", e);
+            initException
+                    .setErrorCode(SchedulerException.ERR_BAD_CONFIGURATION);
             throw initException;
         }
 
@@ -829,7 +829,8 @@ public class StdSchedulerFactory implements SchedulerFactory {
 
         if (jsClass == null) {
             initException = new SchedulerException(
-                    "JobStore class not specified. ");
+                    "JobStore class not specified. ",
+                    SchedulerException.ERR_BAD_CONFIGURATION);
             throw initException;
         }
 
@@ -838,6 +839,8 @@ public class StdSchedulerFactory implements SchedulerFactory {
         } catch (Exception e) {
             initException = new SchedulerException("JobStore class '" + jsClass
                     + "' could not be instantiated.", e);
+            initException
+                    .setErrorCode(SchedulerException.ERR_BAD_CONFIGURATION);
             throw initException;
         }
 
@@ -849,6 +852,8 @@ public class StdSchedulerFactory implements SchedulerFactory {
         } catch (Exception e) {
             initException = new SchedulerException("JobStore class '" + jsClass
                     + "' props could not be configured.", e);
+            initException
+                    .setErrorCode(SchedulerException.ERR_BAD_CONFIGURATION);
             throw initException;
         }
 
@@ -864,9 +869,7 @@ public class StdSchedulerFactory implements SchedulerFactory {
                     // If this lock handler requires the table prefix, add it to its properties.
                     if (lockHandler instanceof TablePrefixAware) {
                         tProps.setProperty(
-                                PROP_TABLE_PREFIX, ((JobStoreSupport)js).getTablePrefix());
-                        tProps.setProperty(
-                                PROP_SCHED_NAME, schedName);
+                            PROP_TABLE_PREFIX, ((JobStoreSupport)js).getTablePrefix());
                     }
 
                     try {
@@ -874,6 +877,7 @@ public class StdSchedulerFactory implements SchedulerFactory {
                     } catch (Exception e) {
                         initException = new SchedulerException("JobStore LockHandler class '" + lockHandlerClass
                                 + "' props could not be configured.", e);
+                        initException.setErrorCode(SchedulerException.ERR_BAD_CONFIGURATION);
                         throw initException;
                     }
 
@@ -882,6 +886,7 @@ public class StdSchedulerFactory implements SchedulerFactory {
                 } catch (Exception e) {
                     initException = new SchedulerException("JobStore LockHandler class '" + lockHandlerClass
                             + "' could not be instantiated.", e);
+                    initException.setErrorCode(SchedulerException.ERR_BAD_CONFIGURATION);
                     throw initException;
                 }
             }
@@ -905,6 +910,8 @@ public class StdSchedulerFactory implements SchedulerFactory {
                 } catch (Exception e) {
                     initException = new SchedulerException("ConnectionProvider class '" + cpClass
                             + "' could not be instantiated.", e);
+                    initException
+                            .setErrorCode(SchedulerException.ERR_BAD_CONFIGURATION);
                     throw initException;
                 }
 
@@ -917,6 +924,8 @@ public class StdSchedulerFactory implements SchedulerFactory {
                 } catch (Exception e) {
                     initException = new SchedulerException("ConnectionProvider class '" + cpClass
                             + "' props could not be configured.", e);
+                    initException
+                            .setErrorCode(SchedulerException.ERR_BAD_CONFIGURATION);
                     throw initException;
                 }
 
@@ -1013,7 +1022,8 @@ public class StdSchedulerFactory implements SchedulerFactory {
             if (plugInClass == null) {
                 initException = new SchedulerException(
                         "SchedulerPlugin class not specified for plugin '"
-                                + pluginNames[i] + "'");
+                                + pluginNames[i] + "'",
+                        SchedulerException.ERR_BAD_CONFIGURATION);
                 throw initException;
             }
             SchedulerPlugin plugin = null;
@@ -1024,6 +1034,8 @@ public class StdSchedulerFactory implements SchedulerFactory {
                 initException = new SchedulerException(
                         "SchedulerPlugin class '" + plugInClass
                                 + "' could not be instantiated.", e);
+                initException
+                        .setErrorCode(SchedulerException.ERR_BAD_CONFIGURATION);
                 throw initException;
             }
             try {
@@ -1032,6 +1044,8 @@ public class StdSchedulerFactory implements SchedulerFactory {
                 initException = new SchedulerException(
                         "JobStore SchedulerPlugin '" + plugInClass
                                 + "' props could not be configured.", e);
+                initException
+                        .setErrorCode(SchedulerException.ERR_BAD_CONFIGURATION);
                 throw initException;
             }
 
@@ -1041,7 +1055,7 @@ public class StdSchedulerFactory implements SchedulerFactory {
         // Set up any JobListeners
         // ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 
-        Class<?>[] strArg = new Class[] { String.class };
+        Class[] strArg = new Class[] { String.class };
         String[] jobListenerNames = cfg.getPropertyGroups(PROP_JOB_LISTENER_PREFIX);
         JobListener[] jobListeners = new JobListener[jobListenerNames.length];
         for (int i = 0; i < jobListenerNames.length; i++) {
@@ -1053,7 +1067,8 @@ public class StdSchedulerFactory implements SchedulerFactory {
             if (listenerClass == null) {
                 initException = new SchedulerException(
                         "JobListener class not specified for listener '"
-                                + jobListenerNames[i] + "'");
+                                + jobListenerNames[i] + "'",
+                        SchedulerException.ERR_BAD_CONFIGURATION);
                 throw initException;
             }
             JobListener listener = null;
@@ -1064,6 +1079,8 @@ public class StdSchedulerFactory implements SchedulerFactory {
                 initException = new SchedulerException(
                         "JobListener class '" + listenerClass
                                 + "' could not be instantiated.", e);
+                initException
+                        .setErrorCode(SchedulerException.ERR_BAD_CONFIGURATION);
                 throw initException;
             }
             try {
@@ -1071,9 +1088,7 @@ public class StdSchedulerFactory implements SchedulerFactory {
                 try { 
                     nameSetter = listener.getClass().getMethod("setName", strArg);
                 }
-                catch(NoSuchMethodException ignore) { 
-                    /* do nothing */ 
-                }
+                catch(NoSuchMethodException ignore) { /* do nothing */ }
                 if(nameSetter != null) {
                     nameSetter.invoke(listener, new Object[] {jobListenerNames[i] } );
                 }
@@ -1082,6 +1097,8 @@ public class StdSchedulerFactory implements SchedulerFactory {
                 initException = new SchedulerException(
                         "JobListener '" + listenerClass
                                 + "' props could not be configured.", e);
+                initException
+                        .setErrorCode(SchedulerException.ERR_BAD_CONFIGURATION);
                 throw initException;
             }
             jobListeners[i] = listener;
@@ -1101,7 +1118,8 @@ public class StdSchedulerFactory implements SchedulerFactory {
             if (listenerClass == null) {
                 initException = new SchedulerException(
                         "TriggerListener class not specified for listener '"
-                                + triggerListenerNames[i] + "'");
+                                + triggerListenerNames[i] + "'",
+                        SchedulerException.ERR_BAD_CONFIGURATION);
                 throw initException;
             }
             TriggerListener listener = null;
@@ -1112,6 +1130,8 @@ public class StdSchedulerFactory implements SchedulerFactory {
                 initException = new SchedulerException(
                         "TriggerListener class '" + listenerClass
                                 + "' could not be instantiated.", e);
+                initException
+                        .setErrorCode(SchedulerException.ERR_BAD_CONFIGURATION);
                 throw initException;
             }
             try {
@@ -1128,6 +1148,8 @@ public class StdSchedulerFactory implements SchedulerFactory {
                 initException = new SchedulerException(
                         "TriggerListener '" + listenerClass
                                 + "' props could not be configured.", e);
+                initException
+                        .setErrorCode(SchedulerException.ERR_BAD_CONFIGURATION);
                 throw initException;
             }
             triggerListeners[i] = listener;
@@ -1136,11 +1158,10 @@ public class StdSchedulerFactory implements SchedulerFactory {
         boolean tpInited = false;
         boolean qsInited = false;
 
-
         // Get ThreadExecutor Properties
         // ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
-
         String threadExecutorClass = cfg.getStringProperty(PROP_THREAD_EXECUTOR_CLASS);
+
         if (threadExecutorClass != null) {
             tProps = cfg.getPropertyGroup(PROP_THREAD_EXECUTOR, true);
             try {
@@ -1151,15 +1172,14 @@ public class StdSchedulerFactory implements SchedulerFactory {
             } catch (Exception e) {
                 initException = new SchedulerException(
                         "ThreadExecutor class '" + threadExecutorClass + "' could not be instantiated.", e);
+                initException.setErrorCode(SchedulerException.ERR_BAD_CONFIGURATION);
                 throw initException;
             }
         } else {
             log.info("Using default implementation for ThreadExecutor");
             threadExecutor = new DefaultThreadExecutor();
         }
-
-
-
+   
         // Fire everything up
         // ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
         try {
@@ -1174,40 +1194,35 @@ public class StdSchedulerFactory implements SchedulerFactory {
             if (wrapJobInTx) {
                 jrsf = new JTAJobRunShellFactory();
             } else {
-                jrsf = new JTAAnnotationAwareJobRunShellFactory();
+                jrsf = new StdJobRunShellFactory();
             }
     
             if (autoId) {
                 try {
                   schedInstId = DEFAULT_INSTANCE_ID;
-                  if (js.isClustered()) {
-                      schedInstId = instanceIdGenerator.generateInstanceId();
-                  }
+                  schedInstId = instanceIdGenerator.generateInstanceId();
                 } catch (Exception e) {
                     getLog().error("Couldn't generate instance Id!", e);
                     throw new IllegalStateException("Cannot run without an instance id.");
                 }
             }
 
-            if (js.getClass().getName().startsWith("org.terracotta.quartz")) {
-                try {
-                    String uuid = (String) js.getClass().getMethod("getUUID").invoke(js);
-                    if(schedInstId.equals(DEFAULT_INSTANCE_ID)) {
-                        schedInstId = "TERRACOTTA_CLUSTERED,node=" + uuid;
-                        if (jmxObjectName == null) {
-                            jmxObjectName = QuartzSchedulerResources.generateJMXObjectName(schedName, schedInstId);
-                        }
-                    } else if(jmxObjectName == null) {
-                        jmxObjectName = QuartzSchedulerResources.generateJMXObjectName(schedName, schedInstId + ",node=" + uuid);
-                    }
-                } catch(Exception e) {
-                    throw new RuntimeException("Problem obtaining node id from TerracottaJobStore.", e);
-                }
-
-                if(null == cfg.getStringProperty(PROP_SCHED_JMX_EXPORT)) {
-                    jmxExport = true;
-                }
-            }
+           	if (js.getClass().getName().equals("org.terracotta.quartz.TerracottaJobStore")) {
+       			try {
+       				String uuid = (String) js.getClass().getMethod("getUUID").invoke(js);
+       				if(schedInstId.equals(DEFAULT_INSTANCE_ID)) {
+       					schedInstId = "TERRACOTTA_CLUSTERED,node=" + uuid;
+       				} else {
+       					schedInstId += ",node=" + uuid;
+       				}
+       			} catch(Exception e) {
+       				throw new RuntimeException("Problem obtaining node id from TerracottaJobStore.", e);
+       			}
+       			
+       			if(null == cfg.getStringProperty(PROP_SCHED_JMX_EXPORT)) {
+       				jmxExport = true;
+       			}
+           	}
             
             if (js instanceof JobStoreSupport) {
                 JobStoreSupport jjs = (JobStoreSupport)js;
@@ -1226,8 +1241,6 @@ public class StdSchedulerFactory implements SchedulerFactory {
             rsrcs.setMakeSchedulerThreadDaemon(makeSchedulerThreadDaemon);
             rsrcs.setThreadsInheritInitializersClassLoadContext(threadsInheritInitalizersClassLoader);
             rsrcs.setRunUpdateCheck(!skipUpdateCheck);
-            rsrcs.setBatchTimeWindow(batchTimeWindow);
-            rsrcs.setMaxBatchSize(maxBatchSize);
             rsrcs.setInterruptJobsOnShutdown(interruptJobsOnShutdown);
             rsrcs.setInterruptJobsOnShutdownWithWait(interruptJobsOnShutdownWithWait);
             rsrcs.setJMXExport(jmxExport);
@@ -1242,7 +1255,7 @@ public class StdSchedulerFactory implements SchedulerFactory {
             }
     
             SchedulerDetailsSetter.setDetails(tp, schedName, schedInstId);
-
+    
             rsrcs.setThreadExecutor(threadExecutor);
             threadExecutor.initialize();
 
@@ -1256,13 +1269,16 @@ public class StdSchedulerFactory implements SchedulerFactory {
             tpInited = true;
     
             rsrcs.setJobStore(js);
-    
+
             // add plugins
             for (int i = 0; i < plugins.length; i++) {
                 rsrcs.addSchedulerPlugin(plugins[i]);
             }
     
-            qs = new QuartzScheduler(rsrcs, idleWaitTime, dbFailureRetry);
+            schedCtxt = new SchedulingContext();
+            schedCtxt.setInstanceId(rsrcs.getInstanceId());
+    
+            qs = new QuartzScheduler(rsrcs, schedCtxt, idleWaitTime, dbFailureRetry);
             qsInited = true;
     
             // Create Scheduler ref...
@@ -1280,26 +1296,28 @@ public class StdSchedulerFactory implements SchedulerFactory {
     
             // add listeners
             for (int i = 0; i < jobListeners.length; i++) {
-                qs.getListenerManager().addJobListener(jobListeners[i], EverythingMatcher.allJobs());
+                qs.addGlobalJobListener(jobListeners[i]);
             }
             for (int i = 0; i < triggerListeners.length; i++) {
-                qs.getListenerManager().addTriggerListener(triggerListeners[i], EverythingMatcher.allTriggers());
+                qs.addGlobalTriggerListener(triggerListeners[i]);
             }
     
             // set scheduler context data...
-            for(Object key: schedCtxtProps.keySet()) {
-                String val = schedCtxtProps.getProperty((String) key);    
-                scheduler.getContext().put((String)key, val);
+            Iterator itr = schedCtxtProps.keySet().iterator();
+            while(itr.hasNext()) {
+                String key = (String) itr.next();
+                String val = schedCtxtProps.getProperty(key);
+    
+                scheduler.getContext().put(key, val);
             }
     
             // fire up job store, and runshell factory
     
             js.setInstanceId(schedInstId);
             js.setInstanceName(schedName);
-            js.setThreadPoolSize(tp.getPoolSize());
             js.initialize(loadHelper, qs.getSchedulerSignaler());
-
-            jrsf.initialize(scheduler);
+            
+            jrsf.initialize(scheduler, schedCtxt);
             
             qs.initialize();
     
@@ -1343,8 +1361,10 @@ public class StdSchedulerFactory implements SchedulerFactory {
     }
 
     protected Scheduler instantiate(QuartzSchedulerResources rsrcs, QuartzScheduler qs) {
+        SchedulingContext schedCtxt = new SchedulingContext();
+        schedCtxt.setInstanceId(rsrcs.getInstanceId());
 
-        Scheduler scheduler = new StdScheduler(qs);
+        Scheduler scheduler = new StdScheduler(qs, schedCtxt);
         return scheduler;
     }
 
@@ -1359,7 +1379,7 @@ public class StdSchedulerFactory implements SchedulerFactory {
         PropertyDescriptor[] propDescs = bi.getPropertyDescriptors();
         PropertiesParser pp = new PropertiesParser(props);
 
-        java.util.Enumeration<Object> keys = props.keys();
+        java.util.Enumeration keys = props.keys();
         while (keys.hasMoreElements()) {
             String name = (String) keys.nextElement();
             String c = name.substring(0, 1).toUpperCase(Locale.US);
@@ -1373,7 +1393,7 @@ public class StdSchedulerFactory implements SchedulerFactory {
                             "No setter for property '" + name + "'");
                 }
 
-                Class<?>[] params = setMeth.getParameterTypes();
+                Class[] params = setMeth.getParameterTypes();
                 if (params.length != 1) {
                     throw new NoSuchMethodException(
                         "No 1-argument setter for property '" + name + "'");
@@ -1390,15 +1410,15 @@ public class StdSchedulerFactory implements SchedulerFactory {
                     refName = name;
                 
                 if (params[0].equals(int.class)) {
-                    setMeth.invoke(obj, new Object[]{Integer.valueOf(refProps.getIntProperty(refName))});
+                    setMeth.invoke(obj, new Object[]{new Integer(refProps.getIntProperty(refName))});
                 } else if (params[0].equals(long.class)) {
-                    setMeth.invoke(obj, new Object[]{Long.valueOf(refProps.getLongProperty(refName))});
+                    setMeth.invoke(obj, new Object[]{new Long(refProps.getLongProperty(refName))});
                 } else if (params[0].equals(float.class)) {
-                    setMeth.invoke(obj, new Object[]{Float.valueOf(refProps.getFloatProperty(refName))});
+                    setMeth.invoke(obj, new Object[]{new Float(refProps.getFloatProperty(refName))});
                 } else if (params[0].equals(double.class)) {
-                    setMeth.invoke(obj, new Object[]{Double.valueOf(refProps.getDoubleProperty(refName))});
+                    setMeth.invoke(obj, new Object[]{new Double(refProps.getDoubleProperty(refName))});
                 } else if (params[0].equals(boolean.class)) {
-                    setMeth.invoke(obj, new Object[]{Boolean.valueOf(refProps.getBooleanProperty(refName))});
+                    setMeth.invoke(obj, new Object[]{new Boolean(refProps.getBooleanProperty(refName))});
                 } else if (params[0].equals(String.class)) {
                     setMeth.invoke(obj, new Object[]{refProps.getStringProperty(refName)});
                 } else {
@@ -1426,7 +1446,7 @@ public class StdSchedulerFactory implements SchedulerFactory {
         return null;
     }
 
-    private Class<?> loadClass(String className) throws ClassNotFoundException, SchedulerConfigException {
+    private Class loadClass(String className) throws ClassNotFoundException, SchedulerConfigException {
 
         try {
             ClassLoader cl = findClassloader();
@@ -1451,6 +1471,11 @@ public class StdSchedulerFactory implements SchedulerFactory {
     private String getSchedulerName() {
         return cfg.getStringProperty(PROP_SCHED_INSTANCE_NAME,
                 "QuartzScheduler");
+    }
+
+    private String getSchedulerInstId() {
+        return cfg.getStringProperty(PROP_SCHED_INSTANCE_ID,
+                DEFAULT_INSTANCE_ID);
     }
 
     /**
@@ -1516,7 +1541,7 @@ public class StdSchedulerFactory implements SchedulerFactory {
      * StdSchedulerFactory instance.).
      * </p>
      */
-    public Collection<Scheduler> getAllSchedulers() throws SchedulerException {
+    public Collection getAllSchedulers() throws SchedulerException {
         return SchedulerRepository.getInstance().lookupAll();
     }
 }
