@@ -27,8 +27,6 @@ import java.util.Map;
 
 import org.quartz.Job;
 import org.quartz.JobDataMap;
-import org.quartz.Scheduler;
-import org.quartz.SchedulerContext;
 import org.quartz.SchedulerException;
 import org.quartz.spi.TriggerFiredBundle;
 
@@ -37,22 +35,11 @@ import org.quartz.spi.TriggerFiredBundle;
 /**
  * A JobFactory that instantiates the Job instance (using the default no-arg
  * constructor, or more specifically: <code>class.newInstance()</code>), and
- * then attempts to set all values from the <code>SchedulerContext</code> and
- * the <code>JobExecutionContext</code>'s merged <code>JobDataMap</code> onto 
- * bean properties of the <code>Job</code>.
- * 
- * <p>Set the warnIfPropertyNotFound property to true if you'd like noisy logging in
- * the case of values in the JobDataMap not mapping to properties on your Job
- * class.  This may be useful for troubleshooting typos of property names, etc.
- * but very noisy if you regularly (and purposely) have extra things in your
- * JobDataMap.</p>
- * 
- * <p>Also of possible interest is the throwIfPropertyNotFound property which
- * will throw exceptions on unmatched JobDataMap keys.</p>
+ * then attempts to set all values in the <code>JobExecutionContext</code>'s
+ * <code>JobDataMap</code> onto bean properties of the <code>Job</code>.
  * 
  * @see org.quartz.spi.JobFactory
  * @see SimpleJobFactory
- * @see SchedulerContext
  * @see org.quartz.JobExecutionContext#getMergedJobDataMap()
  * @see #setWarnIfPropertyNotFound(boolean)
  * @see #setThrowIfPropertyNotFound(boolean)
@@ -60,16 +47,14 @@ import org.quartz.spi.TriggerFiredBundle;
  * @author jhouse
  */
 public class PropertySettingJobFactory extends SimpleJobFactory {
-    private boolean warnIfNotFound = false;
+    private boolean warnIfNotFound = true;
     private boolean throwIfNotFound = false;
     
-    @Override
-    public Job newJob(TriggerFiredBundle bundle, Scheduler scheduler) throws SchedulerException {
+    public Job newJob(TriggerFiredBundle bundle) throws SchedulerException {
 
-        Job job = super.newJob(bundle, scheduler);
+        Job job = super.newJob(bundle);
         
         JobDataMap jobDataMap = new JobDataMap();
-        jobDataMap.putAll(scheduler.getContext());
         jobDataMap.putAll(bundle.getJobDetail().getJobDataMap());
         jobDataMap.putAll(bundle.getTrigger().getJobDataMap());
 
@@ -91,8 +76,8 @@ public class PropertySettingJobFactory extends SimpleJobFactory {
         
         // Get the wrapped entry set so don't have to incur overhead of wrapping for
         // dirty flag checking since this is read only access
-        for (Iterator<?> entryIter = data.getWrappedMap().entrySet().iterator(); entryIter.hasNext();) {
-            Map.Entry<?,?> entry = (Map.Entry<?,?>)entryIter.next();
+        for (Iterator entryIter = data.getWrappedMap().entrySet().iterator(); entryIter.hasNext();) {
+            Map.Entry entry = (Map.Entry)entryIter.next();
             
             String name = (String)entry.getKey();
             String c = name.substring(0, 1).toUpperCase(Locale.US);
@@ -100,7 +85,7 @@ public class PropertySettingJobFactory extends SimpleJobFactory {
         
             java.lang.reflect.Method setMeth = getSetMethod(methName, propDescs);
         
-            Class<?> paramType = null;
+            Class paramType = null;
             Object o = null;
             
             try {
@@ -126,43 +111,43 @@ public class PropertySettingJobFactory extends SimpleJobFactory {
 
                     if (paramType.equals(int.class)) {
                         if (o instanceof String) {                            
-                            parm = Integer.valueOf((String)o);
+                            parm = new Integer((String)o);
                         } else if (o instanceof Integer) {
                             parm = o;
                         }
                     } else if (paramType.equals(long.class)) {
                         if (o instanceof String) {
-                            parm = Long.valueOf((String)o);
+                            parm = new Long((String)o);
                         } else if (o instanceof Long) {
                             parm = o;
                         }
                     } else if (paramType.equals(float.class)) {
                         if (o instanceof String) {
-                            parm = Float.valueOf((String)o);
+                            parm = new Float((String)o);
                         } else if (o instanceof Float) {
                             parm = o;
                         }
                     } else if (paramType.equals(double.class)) {
                         if (o instanceof String) {
-                            parm = Double.valueOf((String)o);
+                            parm = new Double((String)o);
                         } else if (o instanceof Double) {
                             parm = o;
                         }
                     } else if (paramType.equals(boolean.class)) {
                         if (o instanceof String) {
-                            parm = Boolean.valueOf((String)o);
+                            parm = new Boolean((String)o);
                         } else if (o instanceof Boolean) {
                             parm = o;
                         }
                     } else if (paramType.equals(byte.class)) {
                         if (o instanceof String) {
-                            parm = Byte.valueOf((String)o);
+                            parm = new Byte((String)o);
                         } else if (o instanceof Byte) {
                             parm = o;
                         }
                     } else if (paramType.equals(short.class)) {
                         if (o instanceof String) {
-                            parm = Short.valueOf((String)o);
+                            parm = new Short((String)o);
                         } else if (o instanceof Short) {
                             parm = o;
                         }
@@ -170,7 +155,7 @@ public class PropertySettingJobFactory extends SimpleJobFactory {
                         if (o instanceof String) {
                             String str = (String)o;
                             if (str.length() == 1) {
-                                parm = Character.valueOf(str.charAt(0));
+                                parm = new Character(str.charAt(0));
                             }
                         } else if (o instanceof Character) {
                             parm = o;
