@@ -30,7 +30,6 @@ public class PropertySettingJobFactoryTest extends TestCase {
     
     private PropertySettingJobFactory factory;
     
-    @Override
     protected void setUp() throws Exception {
         factory = new PropertySettingJobFactory();
         factory.setThrowIfPropertyNotFound(true);    
@@ -38,14 +37,14 @@ public class PropertySettingJobFactoryTest extends TestCase {
     
     public void testSetBeanPropsPrimatives() throws SchedulerException {
         JobDataMap jobDataMap = new JobDataMap();
-        jobDataMap.put("intValue", Integer.valueOf(1));
-        jobDataMap.put("longValue", Long.valueOf(2l));
-        jobDataMap.put("floatValue", Float.valueOf(3.0f));
-        jobDataMap.put("doubleValue", Double.valueOf(4.0));
+        jobDataMap.put("intValue", new Integer(1));
+        jobDataMap.put("longValue", new Long(2l));
+        jobDataMap.put("floatValue", new Float(3.0f));
+        jobDataMap.put("doubleValue", new Double(4.0));
         jobDataMap.put("booleanValue", Boolean.TRUE);
-        jobDataMap.put("shortValue", Short.valueOf(((short)5)));
+        jobDataMap.put("shortValue", new Short(((short)5)));
         jobDataMap.put("charValue", 'a');
-        jobDataMap.put("byteValue", Byte.valueOf((byte)6));
+        jobDataMap.put("byteValue", new Byte((byte)6));
         jobDataMap.put("stringValue", "S1");
         jobDataMap.put("mapValue", Collections.singletonMap("A", "B"));
         
@@ -66,12 +65,11 @@ public class PropertySettingJobFactoryTest extends TestCase {
     
     public void testSetBeanPropsUnknownProperty() {
         JobDataMap jobDataMap = new JobDataMap();
-        jobDataMap.put("bogusValue", Integer.valueOf(1));
+        jobDataMap.put("bogusValue", new Integer(1));
         try {
             factory.setBeanProps(new TestBean(), jobDataMap);
             fail();
-        } catch (SchedulerException ignore) { // ignore 
-        }
+        } catch (SchedulerException ignore) {}
     }
     
     public void testSetBeanPropsNullPrimative() {
@@ -80,9 +78,7 @@ public class PropertySettingJobFactoryTest extends TestCase {
         try {
             factory.setBeanProps(new TestBean(), jobDataMap);
             fail();
-        } catch (SchedulerException ignore) {
-            // ignore
-        }
+        } catch (SchedulerException ignore) {}
     }
     
     public void testSetBeanPropsNullNonPrimative() throws SchedulerException {
@@ -100,9 +96,7 @@ public class PropertySettingJobFactoryTest extends TestCase {
         try {
             factory.setBeanProps(new TestBean(), jobDataMap);
             fail();
-        } catch (SchedulerException ignore) {
-            // ignore
-        }
+        } catch (SchedulerException ignore) {}
     }
 
     public void testSetBeanPropsWrongNonPrimativeType() {
@@ -111,9 +105,7 @@ public class PropertySettingJobFactoryTest extends TestCase {
         try {
             factory.setBeanProps(new TestBean(), jobDataMap);
             fail();
-        } catch (SchedulerException ignore) {
-            // ignore
-        }
+        } catch (SchedulerException ignore) {}
     }
 
     public void testSetBeanPropsCharStringTooShort() {
@@ -122,9 +114,7 @@ public class PropertySettingJobFactoryTest extends TestCase {
         try {
             factory.setBeanProps(new TestBean(), jobDataMap);
             fail();
-        } catch (SchedulerException ignore) {
-            // ignroe
-        }
+        } catch (SchedulerException ignore) {}
     }
 
     public void testSetBeanPropsCharStringTooLong() {
@@ -133,9 +123,7 @@ public class PropertySettingJobFactoryTest extends TestCase {
         try {
             factory.setBeanProps(new TestBean(), jobDataMap);
             fail();
-        } catch (SchedulerException ignore) {
-            // ignore
-        }
+        } catch (SchedulerException ignore) {}
     }
 
     public void testSetBeanPropsFromStrings() throws SchedulerException {
@@ -172,7 +160,7 @@ public class PropertySettingJobFactoryTest extends TestCase {
         private short shortValue;
         private char charValue;
         private String stringValue;
-        private Map<?, ?> mapValue;
+        private Map mapValue;
     
         public boolean getBooleanValue() {
             return booleanValue;
@@ -214,11 +202,11 @@ public class PropertySettingJobFactoryTest extends TestCase {
             this.longValue = longValue;
         }
 
-        public Map<?, ?> getMapValue() {
+        public Map getMapValue() {
             return mapValue;
         }
     
-        public void setMapValue(Map<?, ?> mapValue) {
+        public void setMapValue(Map mapValue) {
             this.mapValue = mapValue;
         }
     
